--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,7 +3,7 @@
 
     %h1.text-4xl.font-bold.md:text-6xl.mb-5= Setting&.first&.name || 'Name'
 
-    = image_tag "profile_photo.jpeg", class: 'ml-2 mb-10 float-right w-60 h-60 rounded-full shadow-xl dark:shadow-gray-800'
+    = image_tag "profile_photo.jpeg", class: 'ml-1 mb-10 float-right w-44 md:w-60 h-44 md:h-60 rounded-full shadow-xl dark:shadow-gray-800'
 
     %p.text-2xl.md:text-3xl= Setting&.first&.description || 'Description'
 
