--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,11 +1,12 @@
 %header.mb-20.mt-8
   %div.mb-8
 
-    %h1.text-4xl.font-bold.md:text-6xl.mb-5= Setting&.first&.name || 'Name'
+    %h1.text-5xl.font-bold.md:text-6xl.mb-5= Setting&.first&.name || 'Name'
 
-    = image_tag "profile_photo.jpeg", class: 'ml-1 mb-10 float-right w-44 md:w-60 h-44 md:h-60 rounded-full shadow-xl dark:shadow-gray-800'
+    %div.rounded.pl-5.pr-2.md:pr-4.py-3.md:py-6.bg-slate-100
+      = image_tag "profile_photo.jpeg", class: 'ml-1 mb-10 float-right w-44 md:w-60 h-44 md:h-60 rounded-full shadow-xl dark:shadow-gray-800'
 
-    %p.text-2xl.md:text-3xl= Setting&.first&.description || 'Description'
+      %p.text-xl.md:text-3xl= Setting&.first&.description || 'Description'
 
   %div.mb-7
     = Setting&.first&.email || 'email'
