--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -1,5 +1,5 @@
-%article.mb-4
-  %h2.font-bold
+%article.mb-7.border.border-slate-200.shadow.p-5.text-black
+  %h2.text-xl.font-bold
     = link_to project.source_url, target: '_blank', class: 'text-slate-950' do
       %span.float-left.pr-1
         = project.name
