--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -29,7 +29,7 @@
 
 - if Setting&.first&.summary.present?
   %section.mb-12
-    %h1.font-bold.mb-6.text-xl.uppercase.border-b.border-slate-100.pb-3
+    %h1.font-bold.mb-6.text-xl.uppercase.pb-3
       - if signed_in?
         = link_to "Summary", edit_admin_setting_path(Setting.first)
       - else
@@ -38,7 +38,7 @@
 
 - if PROJECTS_DISPLAYED && Project.any?
   %section.mb-12
-    %h1.font-bold.mb-6.text-xl.uppercase.border-b.border-slate-100.pb-3
+    %h1.font-bold.mb-6.text-xl.uppercase.pb-3
       - if signed_in?
         = link_to "Projects", admin_projects_path
       - else
@@ -47,12 +47,12 @@
 
 - if SKILLSETS_DISPLAYED
   %section.mb-12
-    %h1.font-bold.mb-2.text-xl.uppercase.border-b.border-slate-100.mb-4.pb-3 Skills
+    %h1.font-bold.mb-2.text-xl.uppercase.mb-4.pb-3 Skills
     = render 'skillsets'
 
 - if EXPERIENCES_DISPLAYED && Experience.any?
   %section.mb-12
-    %h1.font-bold.mb-6.text-xl.uppercase.border-b.border-slate-100.pb-3
+    %h1.font-bold.mb-6.text-xl.uppercase.pb-3
       - if signed_in?
         = link_to "Experiences", admin_experiences_path
       - else
@@ -61,7 +61,7 @@
 
 - if EDUCATION_DISPLAYED && Education.any?
   %section.mb-12
-    %h1.font-bold.mb-6.text-xl.uppercase.border-b.border-slate-100.pb-3
+    %h1.font-bold.mb-6.text-xl.uppercase.pb-3
       - if signed_in?
         = link_to "Education", admin_educations_path
       - else
