dark/light mode added

--- a/app/views/experiences/_experience.html.haml
+++ b/app/views/experiences/_experience.html.haml
@@ -1,4 +1,4 @@
-%article.mb-7.border.border-slate-200.shadow.p-5.text-black
+%article.mb-7.border.border-slate-200.shadow.p-5.text-black.dark:text-white
   = render partial: 'experiences/title', locals: { experience: experience }
 
   %div.mb-3
