--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     = render 'shared/head'
 
-  %body.m-7.font-serif.text-slate-950
+  %body.m-7.font-serif.dark:text-slate-100.dark:bg-slate-950
     %div.flex.justify-center
       %div(class='lg:w-2/3')
         = yield
