--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -1,20 +1,23 @@
-%article.mb-7.border.border-slate-200.shadow.p-5.text-black
-  %h2.text-xl.font-bold
-    = link_to project.source_url, target: '_blank', class: 'text-slate-950' do
-      %span.float-left.pr-1
-        = project.name
-      %svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5 text-slate-500")
-        %path(d="M12.232 4.232a2.5 2.5 0 013.536 3.536l-1.225 1.224a.75.75 0 001.061 1.06l1.224-1.224a4 4 0 00-5.656-5.656l-3 3a4 4 0 00.225 5.865.75.75 0 00.977-1.138 2.5 2.5 0 01-.142-3.667l3-3z")
-        %path(d="M11.603 7.963a.75.75 0 00-.977 1.138 2.5 2.5 0 01.142 3.667l-3 3a2.5 2.5 0 01-3.536-3.536l1.225-1.224a.75.75 0 00-1.061-1.06l-1.224 1.224a4 4 0 105.656 5.656l3-3a4 4 0 00-.225-5.865z")
-  / %div
-  /   = link_to project.source_url, project.source_url, target: '_blank'
-  .clear-both
+%div.float-left.w-64.bg-white.p-6.mx-3.mb-3.bg-white.border.border-gray-200.shadow.hover:bg-gray-100.dark:bg-gray-800.dark:border-gray-700.dark:hover:bg-gray-700
+  %h2.mb-4.text-xl.font-bold.dark:text-white
+    = link_to project.source_url, target: '_blank' do
+      .dark:text-white= project.name
 
   - if project.image_url.present?
     .project-image
       = image_tag project.image_url, class: 'img-fluid'
 
-  %p= project.description
+  %p.font-normal.text-sm.mb-4.text-gray-700.dark:text-gray-400= project.description
+
+  %p
+    = link_to project.source_url, target: '_blank', class: 'text-slate-500 text-sm' do
+      .inline-block
+        = render 'shared/link_svg'
+      .inline-block.align-top github.com
+
 
   - if project.working_url.present?
     %p= link_to project.working_url, project.working_url, target: '_blank'
+
+
+
