--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,9 +1,11 @@
 
-%div.m-20
+%div.m-20.lg:mr-64.lg:ml-64
+  %div.flex.text-center.mb-5
+    %p Site produced with Ruby on Rails, Tailwind CSS, Docker and Digital Hosting for hosting, and Kamal for automated deployment.
   %div.flex.justify-center
-    %div
+    %p
       Source code available at
+      = succeed(".") do
+        = link_to "github.com", "https://github.com/carsoncole/about.git", target: '_blank'
 
-  %div.flex.justify-center
-    %div
-      = link_to "github.com/carsoncole/about", "https://github.com/carsoncole/about.git", target: '_blank'
+
