--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,7 +1,7 @@
 
 %div.m-20.lg:mr-64.lg:ml-64
   %div.flex.text-center.mb-5
-    %p Site produced with Ruby on Rails, Tailwind CSS, Docker and Digital Hosting for hosting, and Kamal for automated deployment.
+    %p Site produced with Ruby on Rails, Tailwind CSS, Docker and Digital Ocean for hosting, and Kamal for automated deployment.
   %div.flex.justify-center
     %p
       Source code available at
