--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -1,7 +1,7 @@
-%div.float-left.w-64.bg-white.p-6.mx-3.mb-3.bg-white.border.border-gray-200.shadow.hover:bg-gray-100.dark:bg-gray-800.dark:border-gray-700.dark:hover:bg-gray-700
+%div.float-left.w-64.bg-white.p-5.mx-3.mb-3.bg-white.border.border-gray-200.shadow.hover:bg-gray-100.dark:bg-gray-800.dark:border-gray-700.dark:hover:bg-gray-700
   %h2.mb-4.text-xl.font-bold.dark:text-white
     = link_to project.source_url, target: '_blank' do
-      .dark:text-white= project.name
+      .text-slate-900.dark:text-white= project.name
 
   - if project.image_url.present?
     .project-image
