--- a/app/views/admin/settings/_form.html.haml
+++ b/app/views/admin/settings/_form.html.haml
@@ -1,64 +1,50 @@
-= form_for [:admin, @setting] do |f|
-  - if @setting.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@setting.errors.count, "error")} prohibited this setting from being saved:"
-      %ul
-        - @setting.errors.full_messages.each do |message|
-          %li= message
+%div.w-full.max-w-lg
+  = form_for [:admin, @setting], class: "bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" do |f|
+    - if @setting.errors.any?
+      #error_explanation
+        %h2= "#{pluralize(@setting.errors.count, "error")} prohibited this setting from being saved:"
+        %ul
+          - @setting.errors.full_messages.each do |message|
+            %li= message
 
-  .row
-    .col-lg-8
-      .form-group.mb-5
-        .mb-3= f.label :name
-        = f.text_field :name, class: 'form-control'
+    .mb-5
+      .block.text-gray-700.text-sm.font-bold.mb-2= f.label :name
+      = f.text_field :name, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
 
-  .row
-    .col-lg-12
-      .form-group.mb-5
-        .mb-3= f.label :description
-        = f.text_field :description, class: 'form-control'
 
-  .row
-    .col-lg-12
-      .form-group.mb-5
-        .mb-3= f.label :meta_description
-        = f.text_field :meta_description, class: 'form-control'
+    .mb-3= f.label :description
+    = f.text_area :description, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
 
-  .row
-    .col-lg-8
-      .form-group.mb-5
-        .mb-3= f.label :address
-        = f.text_field :address, class: 'form-control'
 
-  .row
-    .col-lg-8
-      .form-group.mb-5
-        .mb-3= f.label :email
-        = f.text_field :email, class: 'form-control'
+    .mb-3= f.label :meta_description
+    = f.text_field :meta_description, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
 
-  .row
-    .col-lg-8
-      .form-group.mb-5
-        .mb-3= f.label :phone
-        = f.text_field :phone, class: 'form-control'
 
-  .row
-    .col-lg-8
-      .form-group.mb-5
-        .mb-3= f.label :linkedin_url
-        = f.text_field :linkedin_url, class: 'form-control'
+    .mb-3= f.label :address
+    = f.text_field :address, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
 
-  .row
-    .col-lg-8
-      .form-group.mb-5
-        .mb-3= f.label :portfolio_url
-        = f.text_field :portfolio_url, class: 'form-control'
 
-  .row
-    .col-lg-8
-      .form-group.mb-5
-        .mb-3= f.label :summary
-        = f.text_area :summary, class: 'form-control'
+    .mb-3= f.label :email
+    = f.text_field :email, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
 
-  .actions
-    = f.submit 'Save', class: 'btn btn-primary'
+
+    .mb-3= f.label :phone
+    = f.text_field :phone, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
+
+
+    .mb-3= f.label :linkedin_url
+    = f.text_field :linkedin_url, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
+
+    .mb-3= f.label :github_url
+    = f.text_field :github_url, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
+
+
+    .mb-3= f.label :portfolio_url
+    = f.text_field :portfolio_url, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
+
+
+    .mb-3= f.label :summary
+    = f.text_area :summary, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
+
+    .actions
+      = f.submit 'Save', class: 'btn btn-primary'
