--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,19 +1,24 @@
-%footer
-  %div.flex.justify-center.text-xs
+%footer.mt-10
+  %nav.flex.flex-1.space-x-4.font-medium.text-sm
 
-    %span.p-1= link_to "Home", root_path
+    %span.p-1= link_to "Home", root_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    - unless controller_name == 'projects'
+      %span.p-1= link_to "Projects", projects_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    - unless controller_name == 'experiences'
+      %span.p-1= link_to "Experience", experiences_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
     - unless action_name == 'about'
-      %span.p-1= link_to "About", about_path
+      %span.p-1= link_to "About", about_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+
 
     - if signed_in?
       - if Setting.first
-        %span.p-1= link_to "Admin", admin_experiences_path, class: 'nav-link'
+        %span.p-1= link_to "Admin", admin_experiences_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
       - else
-        %span.p-1= link_to "Settings", new_admin_setting_path, class: 'nav-link'
+        %span.p-1= link_to "Settings", new_admin_setting_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
 
-      %span.p-1= link_to "Sign out", sign_out_path, method: :delete, data: { "turbo-method": :delete }, class: 'nav-link'
-    - else
-      %span.p-1= link_to "Sign in", sign_in_path, class: 'nav-link'
+      %span.p-1= link_to "Sign out", sign_out_path, method: :delete, data: { "turbo-method": :delete }, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    / - else
+    /   %span.p-1= link_to "Sign in", sign_in_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
 
 
 
