--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
 %div.grid.grid-cols-3.gap-6
   %div.col-start-1.col-span-2
-    %h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.leading-tight.md:leading-tight.mb-20.text-4xl.md:text-5xl= Setting&.first&.description || 'Description'
+    %h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.leading-tight.md:leading-tight.mb-20.text-4xl.md:text-5xl= Setting&.first&.home_headline || 'Home headline'
 
     %h1.mb-10.text-lg.text-slate-500.max-w-prose
       = render 'summary'
