--- a/app/views/home/source.html.haml
+++ b/app/views/home/source.html.haml
@@ -1,7 +1,6 @@
 %div.grid.grid-cols-3
   %div.col-span-3.md:col-start-1.md:col-span-2.mb-15
-    %h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.leading-tight.md:leading-tight.mb-20.text-4xl.md:text-5xl
-      Full stack tools I'm using on this site.
+    %h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.leading-tight.md:leading-tight.mb-20.text-4xl.md:text-5xl= Setting.first.source_headline
 
 %ul.list-none
   %li
