--- a/app/views/resume/show.pdf.haml
+++ b/app/views/resume/show.pdf.haml
@@ -1,6 +1,6 @@
 %header
   %h1= Setting&.first&.name|| 'Your name here'
-  .bio-description= Setting&.first&.description
+  .bio-description= Setting&.first&.home_headline
 
 
 - if Setting&.first&.status.present?
