--- a/app/views/admin/projects/index.html.haml
+++ b/app/views/admin/projects/index.html.haml
@@ -1,14 +1,17 @@
-%h1 Projects
+%h1.mb-6.text-4xl.text-slate-850.dark:text-slate-100 Projects
 
-%table.table.projects
-
-
+%table.table-fixed.w-full.text-sm.border-collapse(class="border-separate border-spacing-2 border-slate-200")
+  %thead
+    %tr
+      %th(class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left") Name
+      %th(class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left") Source URL
+      %th(class="border-b dark:border-slate-600 font-medium p-4 pl-8 pt-0 pb-3 text-slate-400 dark:text-slate-200 text-left")
   %tbody
     - @projects.each do |project|
       %tr
-        %td= project.name
-        %td= project.source_url
-        %td.actions
+        %td(class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400")= project.name
+        %td(class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400")= project.source_url
+        %td(class="border-b border-slate-100 dark:border-slate-700 p-4 pl-8 text-slate-500 dark:text-slate-400")
           = link_to 'Show', admin_project_path(project)
           = link_to 'Edit', edit_admin_project_path(project)
           = link_to 'Destroy', admin_project_path(project), method: :delete, data: { confirm: 'Are you sure?' }
