--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -2,11 +2,11 @@
   %nav.flex.flex-1.space-x-4.font-medium.text-sm
 
     %span.p-1= link_to "Home", root_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    - unless controller_name == 'projects'
+    - if PROJECTS_DISPLAYED && controller_name != 'projects'
       %span.p-1= link_to "Projects", projects_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    - unless controller_name == 'experiences'
+    - if EXPERIENCES_DISPLAYED && controller_name != 'experiences'
       %span.p-1= link_to "Experience", experiences_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    - unless action_name == 'about'
+    - if ABOUT_DISPLAYED && action_name != 'about'
       %span.p-1= link_to "About", about_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
 
 
