--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -6,12 +6,16 @@
   %nav.flex.flex-1.space-x-4.justify-center.text-sm.border.rounded-full.font-medium.shadow-lg.p-2.mb-20.backdrop-blur(class='ring-1 shadow-slate-800/5 ring-slate-900/5 dark:ring-white/10 dark:bg-slate-800/90 dark:text-slate-200')
     %div
       = link_to 'Home', root_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    %div
-      = link_to 'Projects', projects_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    %div
-      = link_to 'Experience', experiences_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    %div
-      = link_to 'About', about_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    %div
-      = link_to 'Source', source_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    - if PROJECTS_DISPLAYED
+      %div
+        = link_to 'Projects', projects_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    - if EXPERIENCES_DISPLAYED
+      %div
+        = link_to 'Experience', experiences_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    - if ABOUT_DISPLAYED
+      %div
+        = link_to 'About', about_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    - if SOURCE_DISPLAYED
+      %div
+        = link_to 'Source', source_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
   %div.flex-1
