--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-%div.grid.grid-cols-3.gap-6
+%div.grid.lg:grid-cols-3.gap-6
   %div.col-start-1.col-span-2
     %h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.leading-tight.md:leading-tight.mb-20.text-4xl.md:text-5xl= Setting&.first&.home_headline || 'Home headline'
 
@@ -7,5 +7,5 @@
 
 
   %div
-    = image_tag "profile_photo.jpeg", alt: 'Carson Cole image', class: 'h-56 w-56 mb-10 ml-4 rounded-xl rotate-6 shadow-xl dark:shadow-gray-800'
+    = image_tag "profile_photo.jpeg", alt: 'Carson Cole image', class: 'h-56 w-56 mb-10 ml-4 rounded-xl rotate-6 shadow-xl object-scale-down dark:shadow-gray-800'
 
