--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,6 +1,5 @@
+%h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.mb-20.text-4xl.md:text-5xl(class='md:w-4/5')
+  %div.leading-tight.md:leading-tight= Setting.first.projects_headline
 %div.grid.grid-cols-3
-  %div.col-span-3.md:col-start-1.md:col-span-2
-    - if PROJECTS_DISPLAYED && Project.any?
-      %section.mb-12
-        %h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.leading-tight.md:leading-tight.mb-20.text-4xl.md:text-5xl= Setting.first.projects_headline
-        = render 'projects'
+  %div.col-span-3.md:col-start-1.md:col-span-2.mb-12
+    = render 'projects'
