--- a/app/views/experiences/index.html.haml
+++ b/app/views/experiences/index.html.haml
@@ -1,5 +1,11 @@
-%h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.mb-20.text-4xl.md:text-5xl(class='md:w-4/5')
+%h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.mb-10.text-4xl.md:text-5xl(class='md:w-4/5')
   %div.leading-tight.md:leading-tight= Setting.first.experiences_headline
+
+- if Setting.first.experiences_subheading.present?
+  %h2.text-xl.mb-20.max-w-prose.text-slate-500
+    = Setting.first.experiences_subheading
+- else
+  %div.mb-10 &nbsp;
 
 %div.grid.grid-cols-3.gap-6
   %div.col-span-3.md:col-start-1.md:col-span-2
