--- a/app/views/experiences/_experience.html.haml
+++ b/app/views/experiences/_experience.html.haml
@@ -1,4 +1,4 @@
-%article.mb-7.border.border-slate-200.shadow.p-5.text-black.dark:text-white
+%article.mb-7.text-slate-950.dark:text-white
   = render partial: 'experiences/title', locals: { experience: experience }
 
   %h2.mb-3
